FIX: page horizontal scrolling because of form labels

--- a/utils/styles/custom_style.css
+++ b/utils/styles/custom_style.css
@@ -206,4 +206,5 @@
 }
 .row{
 	margin-bottom: 5px;
+	max-width: 100vw;
 }
